//
// Copyright (C) 2021 Grakn Labs
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option java_package = "grakn.protocol";
option java_outer_classname = "ClusterDatabaseProto";

package grakn.protocol;

message ClusterDatabaseManager {

    message Get {
        message Req {
            string name = 1;
        }
        message Res {
            ClusterDatabase database = 1;
        }
    }

    message All {
        message Req {}
        message Res {
            repeated ClusterDatabase databases = 1;
        }
    }
}

message ClusterDatabase {

    string name = 1;
    repeated Replica replicas = 2;

    message Replica {
        string address = 1;
        bool primary = 2;
        bool preferred = 3;
        int64 term = 4;
    }
}
