//
// Copyright (C) 2021 Vaticle
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option java_package = "com.vaticle.typedb.protocol";
option java_outer_classname = "ClusterUserProto";

package typedb.protocol;

message ClusterUserManager {

    message Contains {
        message Req {
            string username = 1;
        }
        message Res {
            bool contains = 1;
        }
    }

    message Create {
        message Req {
            string username = 1;
            string password = 2;
        }
        message Res {}
    }

    message All {
        message Req {}
        message Res {
            repeated string names = 1;
        }
    }
}

message ClusterUser {

    message Password {
        message Req {
            string username = 1;
            string password = 2;
        }
        message Res {}
    }

    message Token {
        message Req {
            string username = 1;
        }

        message Res {
            string token = 1;
        }
    }

    message Delete {
        message Req {
            string username = 1;
        }
        message Res {}
    }
}

